--- a/Project SE/ui/newpasswordscreen.ui
+++ b/Project SE/ui/newpasswordscreen.ui
@@ -390,8 +390,9 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string notr="true">QLineEdit{
 border: 1px solid rgba(0, 0, 0, 1); 
 border-radius: 2px;
-	background-color: rgb(252, 252, 252);
+background-color: rgb(252, 252, 252);
 padding-left: 5px;
+padding-right: 25px;
 font-family: &quot;Roboto&quot;;
 font-size: 19px;
 font-weight: 400;
@@ -961,8 +962,9 @@ color: rgba(0, 0, 0, 80);
      <string notr="true">QLineEdit{
 border: 1px solid rgba(0, 0, 0, 1); 
 border-radius: 2px;
-	background-color: rgb(252, 252, 252);
+background-color: rgb(252, 252, 252);
 padding-left: 5px;
+padding-right: 25px;
 font-family: &quot;Roboto&quot;;
 font-size: 19px;
 font-weight: 400;
@@ -993,6 +995,7 @@ border: 1px solid rgba(0, 0, 0, 1);
 border-radius: 2px;
 background-color: rgb(252, 252, 252);
 padding-left: 5px;
+padding-right: 25px;
 font-family: &quot;Roboto&quot;;
 font-size: 19px;
 font-weight: 400;
@@ -1270,6 +1273,58 @@ color: rgb(255, 0, 0);</string>
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="editbtn">
+    <property name="geometry">
+     <rect>
+      <x>906</x>
+      <y>260</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="viewpassword">
+    <property name="geometry">
+     <rect>
+      <x>906</x>
+      <y>260</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/view.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1316,6 +1371,8 @@ color: rgb(255, 0, 0);</string>
    <zorder>savebtn</zorder>
    <zorder>error</zorder>
    <zorder>label_9</zorder>
+   <zorder>viewpassword</zorder>
+   <zorder>editbtn</zorder>
   </widget>
  </widget>
  <resources>
