--- a/Project SE/ui/userprofilescreen.ui
+++ b/Project SE/ui/userprofilescreen.ui
@@ -1042,6 +1042,87 @@ color: rgba(0, 0, 0, 80);
      </size>
     </property>
    </widget>
+   <widget class="QPushButton" name="newpasswordbtn">
+    <property name="geometry">
+     <rect>
+      <x>1040</x>
+      <y>460</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="editimg">
+    <property name="geometry">
+     <rect>
+      <x>1040</x>
+      <y>460</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 34px;
+    font-weight: bold;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/editp.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>262</x>
+      <y>230</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+   
+	color: rgba(0, 0, 0, 0.6);
+    font-family: &quot;Roboto&quot;;
+    font-size: 10px;
+    font-weight: 400;
+
+}</string>
+    </property>
+    <property name="text">
+     <string>(Coming Soon)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>whitebg_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -1081,6 +1162,9 @@ color: rgba(0, 0, 0, 80);
    <zorder>profileimg</zorder>
    <zorder>viewpassword</zorder>
    <zorder>editbtn</zorder>
+   <zorder>editimg</zorder>
+   <zorder>label_9</zorder>
+   <zorder>newpasswordbtn</zorder>
   </widget>
  </widget>
  <resources>
