--- a/Project SE/ui/admin_cashierscreen.ui
+++ b/Project SE/ui/admin_cashierscreen.ui
@@ -1275,6 +1275,26 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>390</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="doubleSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>480</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
    <zorder>whitebg</zorder>
    <zorder>whitebg_10</zorder>
    <zorder>sidebar</zorder>
@@ -1315,6 +1335,8 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>label</zorder>
    <zorder>label_3</zorder>
    <zorder>imgplaceholder</zorder>
+   <zorder>spinBox</zorder>
+   <zorder>doubleSpinBox</zorder>
   </widget>
  </widget>
  <resources>
