--- a/Project SE/ui/admin_cashierscreen.ui
+++ b/Project SE/ui/admin_cashierscreen.ui
@@ -848,7 +848,7 @@ QPushButton:pressed {
       <x>900</x>
       <y>650</y>
       <width>91</width>
-      <height>30</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -870,9 +870,9 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>680</y>
+      <y>675</y>
       <width>81</width>
-      <height>30</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -1205,20 +1205,20 @@ QTableWidget#tableWidget QHeaderView::section {
    <widget class="QLineEdit" name="tendered_field">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>660</y>
-      <width>141</width>
+      <x>1090</x>
+      <y>650</y>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit#userfield {
-	padding-left: 10px;
-    border-radius: 10px;
-    border: 1.5px solid rgb(0, 0, 0);  
+     <string notr="true">QLineEdit{
+	padding-left: 8px;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);  
     background-color: rgba(255, 255, 255, 240);
     font-family: 'Roboto';
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: 400;
 }
 </string>
@@ -1233,30 +1233,52 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="payable_amount">
     <property name="geometry">
      <rect>
-      <x>1110</x>
+      <x>1099</x>
       <y>610</y>
-      <width>81</width>
+      <width>83</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-weight: 500;
+}</string>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0.00</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="change">
     <property name="geometry">
      <rect>
-      <x>1110</x>
-      <y>680</y>
-      <width>61</width>
+      <x>1060</x>
+      <y>675</y>
+      <width>121</width>
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-weight: 500;
+}</string>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0.00</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="imgplaceholder">
@@ -1273,26 +1295,6 @@ QTableWidget#tableWidget QHeaderView::section {
     </property>
     <property name="scaledContents">
      <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>390</y>
-      <width>42</width>
-      <height>22</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>480</y>
-      <width>62</width>
-      <height>22</height>
-     </rect>
     </property>
    </widget>
    <zorder>whitebg</zorder>
@@ -1332,11 +1334,9 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>extrasbtn</zorder>
    <zorder>tableWidget</zorder>
    <zorder>tendered_field</zorder>
-   <zorder>label</zorder>
-   <zorder>label_3</zorder>
+   <zorder>payable_amount</zorder>
+   <zorder>change</zorder>
    <zorder>imgplaceholder</zorder>
-   <zorder>spinBox</zorder>
-   <zorder>doubleSpinBox</zorder>
   </widget>
  </widget>
  <resources>
