--- a/Project SE/ui/admin_cashierscreen.ui
+++ b/Project SE/ui/admin_cashierscreen.ui
@@ -409,35 +409,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-
-QPushButton:hover{
-color: #FB9722;
-border: 2px solid #FB9722;
-border-radius: 8px;
-background-color: rgba(255, 167, 25, 0.1);
-}</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -660,7 +631,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>70</y>
+      <y>69</y>
       <width>121</width>
       <height>30</height>
      </rect>
@@ -669,7 +640,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
      <string notr="true">QLabel{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
 }</string>
     </property>
@@ -690,7 +661,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit#userfield {
+     <string notr="true">QLineEdit {
 	padding-left: 10px;
     border-radius: 10px;
     border: 1.5px solid rgb(0, 0, 0);  
@@ -715,7 +686,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>112</y>
+      <y>114</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -724,7 +695,7 @@ QTableWidget#tableWidget2 QHeaderView::section {
      <string notr="true">QLabel{
     color: #000000;
     font-family: 'Roboto';
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
 }</string>
     </property>
@@ -754,15 +725,15 @@ QTableWidget#tableWidget2 QHeaderView::section {
     <widget class="QRadioButton" name="dineinbtn">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>0</y>
+       <x>6</x>
+       <y>3</y>
        <width>61</width>
-       <height>17</height>
+       <height>16</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font-family:'Roboto';
-font-size:11px;
+font-size:12px;
 font-weight: 500;
 border:none;</string>
      </property>
@@ -773,15 +744,15 @@ border:none;</string>
     <widget class="QRadioButton" name="takeoutbtn">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>0</y>
+       <x>78</x>
+       <y>3</y>
        <width>71</width>
        <height>16</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font-family:'Roboto';
-font-size:11px;
+font-size:12px;
 font-weight: 500;
 border:none;</string>
      </property>
@@ -818,7 +789,7 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>Proceed</string>
+     <string>Generate Sale!</string>
     </property>
    </widget>
    <widget class="QLabel" name="userlistlabel_9">
@@ -1300,6 +1271,35 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="reportbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>395</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>S. Management</string>
+    </property>
+   </widget>
    <zorder>whitebg</zorder>
    <zorder>whitebg_10</zorder>
    <zorder>sidebar</zorder>
@@ -1312,7 +1312,6 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
    <zorder>homeIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>label_2</zorder>
@@ -1340,6 +1339,7 @@ QTableWidget#tableWidget QHeaderView::section {
    <zorder>payable_amount</zorder>
    <zorder>change</zorder>
    <zorder>imgplaceholder</zorder>
+   <zorder>reportbtn</zorder>
   </widget>
  </widget>
  <resources>
