--- a/Project SE/ui/reportscreen.ui
+++ b/Project SE/ui/reportscreen.ui
@@ -18,8 +18,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1211</width>
-     <height>801</height>
+     <width>1200</width>
+     <height>800</height>
     </rect>
    </property>
    <property name="layoutDirection">
@@ -398,9 +398,9 @@ background-color: rgba(255, 167, 25, 0.1);
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>15</x>
+      <x>5</x>
       <y>395</y>
-      <width>81</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -408,14 +408,14 @@ background-color: rgba(255, 167, 25, 0.1);
      <string notr="true">QPushButton{
     color: #FB9722;;
     font-family: 'Inter';
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 500;
 	border:none;
 }
 </string>
     </property>
     <property name="text">
-     <string>Reports</string>
+     <string>S. Management</string>
     </property>
    </widget>
    <widget class="QPushButton" name="homebtn">
@@ -663,17 +663,22 @@ QTableWidget#tableWidget QHeaderView::section {
      <bool>true</bool>
     </attribute>
     <attribute name="horizontalHeaderMinimumSectionSize">
-     <number>100</number>
+     <number>50</number>
     </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>150</number>
     </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
-     <bool>true</bool>
+     <bool>false</bool>
     </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
+    <row>
+     <property name="text">
+      <string>New Row</string>
+     </property>
+    </row>
     <column>
      <property name="text">
       <string>ID</string>
@@ -691,16 +696,31 @@ QTableWidget#tableWidget QHeaderView::section {
     </column>
     <column>
      <property name="text">
+      <string>Amount Paid</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Change Amount</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
       <string>Type of Order</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string/>
      </property>
     </column>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>15</x>
+      <x>5</x>
       <y>350</y>
-      <width>81</width>
+      <width>101</width>
       <height>76</height>
      </rect>
     </property>
