--- a/Project SE/ui/reportscreen2.ui
+++ b/Project SE/ui/reportscreen2.ui
@@ -395,29 +395,6 @@ background-color: rgba(255, 167, 25, 0.1);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="reportbtn">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>395</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: #FB9722;;
-    font-family: 'Inter';
-    font-size: 13px;
-    font-weight: 500;
-	border:none;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Reports</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
@@ -909,26 +886,6 @@ border: 2px solid rgba(0, 0, 0, 1);  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>350</y>
-      <width>81</width>
-      <height>76</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel{
-	background-color: rgba(255, 167, 25, 0.1);
-	border: 2px solid #FB9722;
-	border-radius: 8px;
-}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="title_3">
     <property name="geometry">
      <rect>
@@ -1003,12 +960,56 @@ border-radius: 10px;  </string>
    <zorder>boxlabel_total</zorder>
    <zorder>dateEdit</zorder>
    <zorder>peso</zorder>
-   <zorder>label_2</zorder>
    <zorder>reportIcon</zorder>
-   <zorder>reportbtn</zorder>
    <zorder>title_3</zorder>
    <zorder>title</zorder>
   </widget>
+  <widget class="QPushButton" name="reportbtn">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>395</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+</string>
+   </property>
+   <property name="text">
+    <string>S. Management</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>350</y>
+     <width>101</width>
+     <height>76</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>bgwidget</zorder>
+  <zorder>label_2</zorder>
+  <zorder>reportbtn</zorder>
  </widget>
  <resources>
   <include location="../resource.qrc"/>
