--- a/Project SE/ui/reportscreen.ui
+++ b/Project SE/ui/reportscreen.ui
@@ -627,6 +627,21 @@ background-color: rgba(255, 167, 25, 0.1);
       <height>391</height>
      </rect>
     </property>
+    <property name="toolTip">
+     <string notr="true"/>
+    </property>
+    <property name="statusTip">
+     <string notr="true"/>
+    </property>
+    <property name="whatsThis">
+     <string notr="true"/>
+    </property>
+    <property name="accessibleName">
+     <string notr="true"/>
+    </property>
+    <property name="accessibleDescription">
+     <string notr="true"/>
+    </property>
     <property name="styleSheet">
      <string notr="true">::item:hover {
     background-color: #FB9722; 
@@ -647,14 +662,23 @@ QTableWidget#tableWidget QHeaderView::section {
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::NoSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="showGrid">
      <bool>true</bool>
     </property>
     <property name="gridStyle">
-     <enum>Qt::SolidLine</enum>
+     <enum>Qt::DashDotDotLine</enum>
     </property>
     <property name="sortingEnabled">
      <bool>false</bool>
@@ -674,11 +698,6 @@ QTableWidget#tableWidget QHeaderView::section {
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
     <column>
      <property name="text">
       <string>ID</string>
